src/test/deca/syntax/valid/provided/etrange.deca
// Description:
//    tests de programme incorrect lexicalement (commentaire)
//
// Resultats:
//    ligne 10 : Erreur, mais pas ici */ ne doit pas etre inclue dans le commentaire
//
// Historique:
//    cree le 17/12/2024
{
    int /* ;
}
