src/test/deca/syntax/invalid/provided/lettre_bizzare.deca
// Description:
//    tests de programme incorrect.
//
// Resultats:
//    Ligne 11 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 01/01/2025
{
    int µ;
}